@@ -26,7 +26,6 @@ import static java.time.temporal.TemporalAdjusters.lastDayOfYear;
 import static java.util.function.Function.identity;
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.reducing;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.activeStatuses;
 import static org.synyx.urlaubsverwaltung.application.vacationtype.VacationCategory.HOLIDAY;
@@ -43,10 +42,119 @@ public class VacationDaysService {
     private final Clock clock;
 
     @Autowired
-    public VacationDaysService(WorkDaysCountService workDaysCountService, ApplicationService applicationService, Clock clock) {
+    VacationDaysService(WorkDaysCountService workDaysCountService, ApplicationService applicationService, Clock clock) {
         this.workDaysCountService = workDaysCountService;
         this.applicationService = applicationService;
         this.clock = clock;
+    }
+
+    /**
+     * @param holidayAccounts      {@link Account} to determine configured expiryDate of {@link Application}s
+     * @param workingTimeCalendars {@link WorkingTimeCalendar} to calculate the used vacation days for the {@link Account}s persons.
+     * @param year                 year to calculate left vacation days for.
+     * @return {@link HolidayAccountVacationDays} for every passed {@link Account}. {@link Account}s with no used vacation are included.
+     * @throws IllegalArgumentException when dateRange is over one year.
+     */
+    public Map<Account, HolidayAccountVacationDays> getVacationDaysLeft(List<Account> holidayAccounts,
+                                                                        Map<Person, WorkingTimeCalendar> workingTimeCalendars,
+                                                                        Year year) {
+        return getVacationDaysLeft(holidayAccounts, workingTimeCalendars, year, List.of());
+    }
+
+    /**
+     * This version of the method also considers the account for next year,
+     * so that it can adjust for vacation days carried over from this year to the next and then used there
+     * (reducing the amount available in this year accordingly)
+     *
+     * @param holidayAccounts         {@link Account} to determine configured expiryDate of {@link Application}s
+     * @param workingTimeCalendars    {@link WorkingTimeCalendar} to calculate the used vacation days for the {@link Account}s persons.
+     * @param year                    year to calculate left vacation days for.
+     * @param holidayAccountsNextYear to calculate the vacation days that are already used next year
+     * @return {@link HolidayAccountVacationDays} for every passed {@link Account}. {@link Account}s with no used vacation are included.
+     * @throws IllegalArgumentException when dateRange is over one year.
+     */
+    public Map<Account, HolidayAccountVacationDays> getVacationDaysLeft(List<Account> holidayAccounts,
+                                                                        Map<Person, WorkingTimeCalendar> workingTimeCalendars,
+                                                                        Year year, List<Account> holidayAccountsNextYear) {
+        final LocalDate startDate = year.atDay(1);
+        final LocalDate endDate = startDate.with(lastDayOfYear());
+
+        return getVacationDaysLeft(holidayAccounts, workingTimeCalendars, new DateRange(startDate, endDate), holidayAccountsNextYear);
+    }
+
+    /**
+     * @param holidayAccounts      {@link Account} to determine configured expiryDate of {@link Application}s
+     * @param workingTimeCalendars {@link WorkingTimeCalendar} to calculate the used vacation days for the {@link Account}s persons.
+     * @param dateRange            date range to calculate left vacation days for. must be within a year.
+     * @return {@link HolidayAccountVacationDays} for every passed {@link Account}. {@link Account}s with no used vacation are included.
+     * @throws IllegalArgumentException when dateRange is over one year.
+     */
+    public Map<Account, HolidayAccountVacationDays> getVacationDaysLeft(List<Account> holidayAccounts, Map<Person, WorkingTimeCalendar> workingTimeCalendars, DateRange dateRange) {
+        return getVacationDaysLeft(holidayAccounts, workingTimeCalendars, dateRange, List.of());
+    }
+
+    /**
+     * This version of the method also considers the account for next year,
+     * so that it can adjust for vacation days carried over from this year to the next and then used there
+     * (reducing the amount available in this year accordingly)
+     *
+     * @param holidayAccounts         {@link Account} to determine configured expiryDate of {@link Application}s
+     * @param workingTimeCalendars    {@link WorkingTimeCalendar} to calculate the used vacation days for the {@link Account}s persons.
+     * @param dateRange               date range to calculate left vacation days for. must be within a year.
+     * @param holidayAccountsNextYear to calculate the vacation days that are already used next year
+     * @return {@link HolidayAccountVacationDays} for every passed {@link Account}. {@link Account}s with no used vacation are included.
+     * @throws IllegalArgumentException when dateRange is over one year.
+     */
+    public Map<Account, HolidayAccountVacationDays> getVacationDaysLeft(List<Account> holidayAccounts, Map<Person, WorkingTimeCalendar> workingTimeCalendars,
+                                                                        DateRange dateRange, List<Account> holidayAccountsNextYear) {
+
+        final LocalDate from = dateRange.startDate();
+        final LocalDate to = dateRange.endDate();
+
+        if (to.getYear() != from.getYear()) {
+            throw new IllegalArgumentException(String.format("date range must be in the same year but was from=%s to=%s", from, to));
+        }
+
+        final List<Account> holidayAccountsForYear = holidayAccounts.stream().filter(account -> account.getYear() == from.getYear()).toList();
+        return getUsedVacationDays(holidayAccountsForYear, dateRange, workingTimeCalendars).entrySet().stream()
+            .map(entry -> {
+                final Account account = entry.getKey();
+                final BigDecimal vacationDays = account.getActualVacationDays();
+                final BigDecimal remainingVacationDays = account.getRemainingVacationDays();
+                final BigDecimal remainingVacationDaysNotExpiring = account.getRemainingVacationDaysNotExpiring();
+
+                final UsedVacationDaysTuple usedVacationDaysTuple = entry.getValue();
+                final UsedVacationDaysYear usedVacationDaysYear = usedVacationDaysTuple.usedVacationDaysYear();
+
+                final BigDecimal vacationDaysUsedNextYear = holidayAccountsNextYear.stream()
+                    .filter(holidayAccountNextYear -> holidayAccountNextYear.getPerson().equals(account.getPerson()))
+                    .filter(holidayAccountNextYear -> holidayAccountNextYear.getYear() == from.getYear() + 1)
+                    .findFirst()
+                    .map(this::getUsedRemainingVacationDays)
+                    .orElse(ZERO);
+
+                final VacationDaysLeft vacationDaysLeftYear = VacationDaysLeft.builder()
+                    .withAnnualVacation(vacationDays)
+                    .withRemainingVacation(remainingVacationDays)
+                    .notExpiring(remainingVacationDaysNotExpiring)
+                    .forUsedVacationDaysBeforeExpiry(usedVacationDaysYear.usedVacationDaysBeforeExpiryDate())
+                    .forUsedVacationDaysAfterExpiry(usedVacationDaysYear.usedVacationDaysAfterExpiryDate())
+                    .withVacationDaysUsedNextYear(vacationDaysUsedNextYear)
+                    .build();
+
+                final UsedVacationDaysDateRange usedVacationDaysDateRange = usedVacationDaysTuple.usedVacationDaysDateRange();
+                final VacationDaysLeft vacationDaysLeftDateRange = VacationDaysLeft.builder()
+                    .withAnnualVacation(vacationDays)
+                    .withRemainingVacation(remainingVacationDays)
+                    .notExpiring(remainingVacationDaysNotExpiring)
+                    .forUsedVacationDaysBeforeExpiry(usedVacationDaysDateRange.usedVacationDaysBeforeExpiryDate())
+                    .forUsedVacationDaysAfterExpiry(usedVacationDaysDateRange.usedVacationDaysAfterExpiryDate())
+                    .withVacationDaysUsedNextYear(vacationDaysUsedNextYear)
+                    .build();
+
+                return new HolidayAccountVacationDays(account, vacationDaysLeftYear, vacationDaysLeftDateRange);
+            })
+            .collect(toMap(HolidayAccountVacationDays::account, identity()));
     }
 
     /**
@@ -59,88 +167,24 @@ public class VacationDaysService {
      * @param account {@link Account}
      * @return total number of left vacation days
      */
-    BigDecimal calculateTotalLeftVacationDays(Account account) {
+    BigDecimal getTotalLeftVacationDays(Account account) {
         final LocalDate today = LocalDate.now(clock);
-        final LocalDate firstDayOfYear = Year.of(account.getYear()).atDay(1);
-        final LocalDate lastDayOfYear = firstDayOfYear.with(lastDayOfYear());
-        return calculateTotalLeftVacationDays(firstDayOfYear, lastDayOfYear, today, account);
-    }
-
-    private BigDecimal calculateTotalLeftVacationDays(LocalDate start, LocalDate end, LocalDate today, Account account) {
-        return getVacationDaysLeft(start, end, account)
+        final LocalDate startDate = Year.of(account.getYear()).atDay(1);
+        final LocalDate endDate = startDate.with(lastDayOfYear());
+        return getVacationDaysLeft(startDate, endDate, account)
             .getLeftVacationDays(today, account.doRemainingVacationDaysExpire(), account.getExpiryDate());
     }
 
     /**
-     * This version of the method also considers the account for next year,
-     * so that it can adjust for vacation days carried over from this year to the next and then used there
-     * (reducing the amount available in this year accordingly)
+     * Calculates the used remaining vacation days based on the given account information
      *
-     * @param account  the account for the year to calculate the vacation days for
-     * @param nextYear the account for following year, if available
-     * @return information about the vacation days left for that year
-     * @deprecated in favor of {@link VacationDaysService#getVacationDaysLeft(List, Map, DateRange)} (less database calls)
+     * @param account to calculate used remaining vacation days of the year of the account
+     * @return the used remaining vacation days
      */
-    @Deprecated(since = "4.53.0")
-    public VacationDaysLeft getVacationDaysLeft(Account account, Optional<Account> nextYear) {
+    public BigDecimal getUsedRemainingVacationDays(Account account) {
         final LocalDate firstDayOfYear = Year.of(account.getYear()).atDay(1);
         final LocalDate lastDayOfYear = firstDayOfYear.with(lastDayOfYear());
-        return getVacationDaysLeft(firstDayOfYear, lastDayOfYear, account, nextYear);
-    }
-
-    /**
-     * @param holidayAccounts              {@link Account} to determine configured expiryDate of {@link Application}s
-     * @param workingTimeCalendarsByPerson {@link WorkingTimeCalendar} to calculate the used vacation days for the {@link Account}s persons.
-     * @param dateRange                    date range to calculate left vacation days for. must be within a year.
-     * @return {@link HolidayAccountVacationDays} for every passed {@link Account}. {@link Account}s with no used vacation are included.
-     * @throws IllegalArgumentException when dateRange is over one year.
-     */
-    public Map<Account, HolidayAccountVacationDays> getVacationDaysLeft(List<Account> holidayAccounts,
-                                                                        Map<Person, WorkingTimeCalendar> workingTimeCalendarsByPerson,
-                                                                        DateRange dateRange) {
-
-        final LocalDate from = dateRange.startDate();
-        final LocalDate to = dateRange.endDate();
-
-        if (to.getYear() != from.getYear()) {
-            throw new IllegalArgumentException(String.format("date range must be in the same year but was from=%s to=%s", from, to));
-        }
-
-        final List<Account> holidayAccountsForYear = holidayAccounts.stream().filter(account -> account.getYear() == from.getYear()).collect(toList());
-        final Map<Account, UsedVacationDaysTuple> usedVacationDaysByAccount = getUsedVacationDays(holidayAccountsForYear, dateRange, workingTimeCalendarsByPerson);
-
-        return usedVacationDaysByAccount.entrySet().stream()
-            .map(entry -> {
-                final Account account = entry.getKey();
-                final UsedVacationDaysTuple usedVacationDaysTuple = entry.getValue();
-
-                final BigDecimal vacationDays = account.getActualVacationDays();
-                final BigDecimal remainingVacationDays = account.getRemainingVacationDays();
-                final BigDecimal remainingVacationDaysNotExpiring = account.getRemainingVacationDaysNotExpiring();
-
-                final UsedVacationDaysYear usedVacationDaysYear = usedVacationDaysTuple.getUsedVacationDaysYear();
-                final VacationDaysLeft vacationDaysLeftYear = VacationDaysLeft.builder()
-                    .withAnnualVacation(vacationDays)
-                    .withRemainingVacation(remainingVacationDays)
-                    .notExpiring(remainingVacationDaysNotExpiring)
-                    .forUsedVacationDaysBeforeExpiry(usedVacationDaysYear.getUsedVacationDaysBeforeExpiryDate())
-                    .forUsedVacationDaysAfterExpiry(usedVacationDaysYear.getUsedVacationDaysAfterExpiryDate())
-                    .withVacationDaysUsedNextYear(ZERO)
-                    .build();
-
-                final UsedVacationDaysDateRange usedVacationDaysDateRange = usedVacationDaysTuple.getUsedVacationDaysDateRange();
-                final VacationDaysLeft vacationDaysLeftDateRange = VacationDaysLeft.builder()
-                    .withAnnualVacation(vacationDays)
-                    .withRemainingVacation(remainingVacationDays)
-                    .notExpiring(remainingVacationDaysNotExpiring)
-                    .forUsedVacationDaysBeforeExpiry(usedVacationDaysDateRange.getUsedVacationDaysBeforeExpiryDate())
-                    .forUsedVacationDaysAfterExpiry(usedVacationDaysDateRange.getUsedVacationDaysAfterExpiryDate())
-                    .withVacationDaysUsedNextYear(ZERO)
-                    .build();
-
-                return new HolidayAccountVacationDays(account, vacationDaysLeftYear, vacationDaysLeftDateRange);
-            })
-            .collect(toMap(HolidayAccountVacationDays::account, identity()));
+        return getUsedRemainingVacationDays(firstDayOfYear, lastDayOfYear, account);
     }
 
     BigDecimal getUsedVacationDaysBetweenTwoMilestones(Person person, LocalDate firstMilestone, LocalDate lastMilestone) {
@@ -159,7 +203,7 @@ public class VacationDaysService {
         final LocalDate firstDayOfYear = dateRange.startDate().with(firstDayOfYear());
         final LocalDate lastDayOfYear = dateRange.endDate().with(lastDayOfYear());
 
-        final List<Person> persons = holidayAccounts.stream().map(Account::getPerson).distinct().collect(toList());
+        final List<Person> persons = holidayAccounts.stream().map(Account::getPerson).distinct().toList();
         final List<Application> applicationsTouchingDateRange = applicationService.getForStatesAndPerson(activeStatuses(), persons, firstDayOfYear, lastDayOfYear);
 
         return getUsedVacationDaysBetweenTwoMilestones(holidayAccounts, applicationsTouchingDateRange, dateRange, workingTimeCalendarsByPerson);
@@ -276,22 +320,8 @@ public class VacationDaysService {
         T add(T toAdd);
     }
 
-    private static class UsedVacationDaysTuple implements Addable<UsedVacationDaysTuple> {
-        private final UsedVacationDaysDateRange usedVacationDaysDateRange;
-        private final UsedVacationDaysYear usedVacationDaysYear;
-
-        UsedVacationDaysTuple(UsedVacationDaysDateRange usedVacationDaysDateRange, UsedVacationDaysYear usedVacationDaysYear) {
-            this.usedVacationDaysDateRange = usedVacationDaysDateRange;
-            this.usedVacationDaysYear = usedVacationDaysYear;
-        }
-
-        UsedVacationDaysDateRange getUsedVacationDaysDateRange() {
-            return usedVacationDaysDateRange;
-        }
-
-        UsedVacationDaysYear getUsedVacationDaysYear() {
-            return usedVacationDaysYear;
-        }
+    private record UsedVacationDaysTuple(UsedVacationDaysDateRange usedVacationDaysDateRange,
+                                         UsedVacationDaysYear usedVacationDaysYear) implements Addable<UsedVacationDaysTuple> {
 
         @Override
         public UsedVacationDaysTuple add(UsedVacationDaysTuple toAdd) {
@@ -306,23 +336,8 @@ public class VacationDaysService {
         }
     }
 
-    private static class UsedVacationDaysYear implements Addable<UsedVacationDaysYear> {
-
-        private final BigDecimal usedVacationDaysBeforeExpiryDate;
-        private final BigDecimal usedVacationDaysAfterExpiryDate;
-
-        UsedVacationDaysYear(BigDecimal usedVacationDaysBeforeExpiryDate, BigDecimal usedVacationDaysAfterExpiryDate) {
-            this.usedVacationDaysBeforeExpiryDate = usedVacationDaysBeforeExpiryDate;
-            this.usedVacationDaysAfterExpiryDate = usedVacationDaysAfterExpiryDate;
-        }
-
-        BigDecimal getUsedVacationDaysBeforeExpiryDate() {
-            return usedVacationDaysBeforeExpiryDate;
-        }
-
-        BigDecimal getUsedVacationDaysAfterExpiryDate() {
-            return usedVacationDaysAfterExpiryDate;
-        }
+    private record UsedVacationDaysYear(BigDecimal usedVacationDaysBeforeExpiryDate,
+                                        BigDecimal usedVacationDaysAfterExpiryDate) implements Addable<UsedVacationDaysYear> {
 
         @Override
         public UsedVacationDaysYear add(UsedVacationDaysYear toAdd) {
@@ -333,23 +348,8 @@ public class VacationDaysService {
         }
     }
 
-    private static class UsedVacationDaysDateRange implements Addable<UsedVacationDaysDateRange> {
-
-        private final BigDecimal usedVacationDaysBeforeExpiryDate;
-        private final BigDecimal usedVacationDaysAfterExpiryDate;
-
-        UsedVacationDaysDateRange(BigDecimal usedVacationDaysBeforeExpiryDate, BigDecimal usedVacationDaysAfterExpiryDate) {
-            this.usedVacationDaysBeforeExpiryDate = usedVacationDaysBeforeExpiryDate;
-            this.usedVacationDaysAfterExpiryDate = usedVacationDaysAfterExpiryDate;
-        }
-
-        BigDecimal getUsedVacationDaysBeforeExpiryDate() {
-            return usedVacationDaysBeforeExpiryDate;
-        }
-
-        BigDecimal getUsedVacationDaysAfterExpiryDate() {
-            return usedVacationDaysAfterExpiryDate;
-        }
+    private record UsedVacationDaysDateRange(BigDecimal usedVacationDaysBeforeExpiryDate,
+                                             BigDecimal usedVacationDaysAfterExpiryDate) implements Addable<UsedVacationDaysDateRange> {
 
         @Override
         public UsedVacationDaysDateRange add(UsedVacationDaysDateRange toAdd) {
@@ -395,12 +395,6 @@ public class VacationDaysService {
             .forUsedVacationDaysAfterExpiry(usedVacationDaysAfterExpiryDate)
             .withVacationDaysUsedNextYear(usedVacationDaysNextYear)
             .build();
-    }
-
-    public BigDecimal getUsedRemainingVacationDays(Account account) {
-        final LocalDate firstDayOfYear = Year.of(account.getYear()).atDay(1);
-        final LocalDate lastDayOfYear = firstDayOfYear.with(lastDayOfYear());
-        return getUsedRemainingVacationDays(firstDayOfYear, lastDayOfYear, account);
     }
 
     private BigDecimal getUsedRemainingVacationDays(LocalDate start, LocalDate end, Account account) {
